Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 2.37***

****	Fix bug24552; Verilog::Module::new_net now defaults net type
	to 'wire'. [Takeo Komiyama]

* Verilog::Language 2.371 2007/01/23

***	Fix bug24345; supply statements cause lint warnings.  [Jeff Trull]

* Verilog::Language 2.370 2007/01/10

***	Fix bug24248; reg/tri/supply* declarations, etc are now stored in Net
	structures as the declared type, instead of as 'wire'.  [Jeff Trull]

***	Fix bug13462; parse {} concatenations in pin connections. [Jeff Trull]

***	Remove backslashes in quoted symbols when they aren't needed.

****	Fix vpm deleting output when file moved between directories.

* Verilog::Language 2.361 2006/10/02

**	Attach Verilog comments to Netlist objects.  [Monte Becker]

***	Add parameters to Verilog::Parser instant callback.  [Monte Becker]

* Verilog::Language 2.360 2006/09/14

***	Added Preproc keep_whitespace=>0 option to delete whitespace.

***	Preprocessor now strips all DOS carrage returns.

***	Allow Verilog::Getopt::file_path to resolve module_dir and/or incdirs.
	Use only module_dir to resolve Netlist modules.  [by John Tseng]

****    Vrename --crypt now uses lower case random identifiers for readability.

****	Fix DOS carrage returns in multiline defines.  [Ralf Karge]

* Verilog::Language 2.352 2006/08/22

***	Fix compile errors under Cygwin.  [Mattan Tsachi]

* Verilog::Language 2.351 2006/06/08

***     Add vhier --language option.  [Sean Nazareth]

****	Fix Getopt::file_path when dir names match file names. [by John Tseng]

* Verilog::Language 2.350 2006/05/19

***	Vpm now emits $timeformat when passed the --timeformat-units switch.

***	SigParser and the Netlister now ignore function and task IOs.

****	Preproc line numbers being off due to multi-line defines.  [Mat Zeno]

****	Fix `include `DEFINE.
