@@ -41,6 +41,8 @@ t/30_preproc.t
 t/30_preproc_nows.out
 t/30_preproc_on.out
 t/30_preproc_sub.out
+t/32_noinc.t
+t/32_noinc.v
 t/35_sigparser.out
 t/35_sigparser.t
 t/40_netlist.t
