@@ -1,0 +1,7 @@
+// DESCRIPTION: Verilog::Preproc: Example source code
+// This file ONLY is placed into the Public Domain, for any use,
+// without warranty, 2007-2007 by Wilson Snyder.
+
+text.
+
+`include "notfound"
